# jit.ndi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  jit.ndi.receive~.vcxproj  jit.ndi.receive~.vcxproj.filters  jit.ndi.send.vcxproj  jit.ndi.send.vcxproj.filters  jit.ndi.send~.vcxproj  jit.ndi.send~.vcxproj.filters  jit.ndi.sln  jit.ndi.sln.DotSettings  package-info.json
.github/workflows/: build.yml
docs/: jit.ndi.receive~.maxref.xml  jit.ndi.send~.maxref.xml
help/: jit.ndi.receive~.maxhelp  jit.ndi.send~.maxhelp
jit.ndi.xcodeproj/: project.pbxproj
jit.ndi.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
jit.ndi.xcodeproj/project.xcworkspace/xcshareddata/: imp.artnet.xccheckout  imp.midi.xccheckout  imp.pokeys.xccheckout  vidi.xccheckout  vidibuild.xccheckout
jit.ndi.xcodeproj/project.xcworkspace/xcuserdata/David.xcuserdatad/: UserInterfaceState.xcuserstate
jit.ndi.xcodeproj/xcuserdata/David.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
jit.ndi.xcodeproj/xcuserdata/David.xcuserdatad/xcschemes/: jit.ndi.xcscheme  xcschememanagement.plist
source/: CMakeLists.txt
source/jit.ndi/: CMakeLists.txt  ndi_runtime.h  version.h
source/jit.ndi/jit.ndi.receive~/: CMakeLists.txt  jit.ndi.receive.c  max.jit.ndi.receive~.c
source/jit.ndi/jit.ndi.send~/: CMakeLists.txt  jit.ndi.send.c  max.jit.ndi.send~.c
src/: jit.ndi.receive.c  jit.ndi.send.c  jit.ndi.send.cpp  max.jit.ndi.receive~.c  max.jit.ndi.send.c  max.jit.ndi.send.cpp  max.jit.ndi.send~.c  ndi_runtime.h
